--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"lint": "eslint \"./{packages, scripts}/**/*.{js,ts,vue,tsx,jsx}\" --fix",
 		"lint:staged": "lint-staged",
-		"prepare": "husky"
+		"prepare": "husky",
+		"build:dev": "rm -rf ./dist && rollup --config ./scripts/rollup/rollup.config.ts --configPlugin @rollup/plugin-typescript"
 	},
 	"keywords": [
 		"源码梳理",
@@ -18,6 +19,9 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@eslint/js": "^9.0.0",
+		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@rollup/plugin-typescript": "^11.1.6",
+		"@types/node": "^20.12.7",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
@@ -25,6 +29,8 @@
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.2",
 		"prettier": "^3.2.5",
+		"rollup": "^4.14.1",
+		"rollup-plugin-generate-package-json": "^3.2.0",
 		"typescript": "^5.4.4",
 		"typescript-eslint": "^7.6.0"
 	},
